# typed_classproperties

./: .gitignore  .gitlint  .gitmodules  .pre-commit-config.yaml  README.adoc  README.md  hatch_build.custom.py  hatch_build.py  pyproject.toml  tests.py
.github/: CODEOWNERS  renovate.json  zizmor.yaml
.github/scripts/: apply_converted_readme.py
.github/workflows/: alternative-type-checkers.yaml  alternative-type-checkers.yaml.yml  autofix-pre-commit.yaml  check-build-publish.yaml  check_build_publish.yaml  publish-pypi-redirects.yaml  pyroma-package-check.yaml  pyroma-package-check.yaml.yml
.pypi-redirects/typed_classproperty/: pyproject.toml
classproperties/: __init__.py
typed_classproperties/: __init__.py
