[project]
name = "typed_classproperty"
version = "1.0.0"
description = "You tried to install \"typed_classproperty\". The correct package name is \"typed_classproperties\"."
readme = { text = "You tried to install \"typed_classproperty\". The correct package name is \"typed_classproperties\".", content-type = "text/markdown" }
authors = [{ name = "Matt Norton", email = "matt@carrotmanmatt.com" }]
classifiers = ["Development Status :: 7 - Inactive"]
dependencies = ["typed_classproperties"]

[project.urls]
Repository = "https://github.com/CarrotManMatt/typed_classproperties"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = false
package = false
trusted-publishing = "always"
